k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80  # The port within the cluster.
    targetPort: 5000  # The port on your backend application containers.
